2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in HEADER-handling from
	net/Makefile.am, netinet/Makefile.am, nfs/Makefile.am.
	* net/Makefile.am: Remove *_HEADERS.
	* netinet/Makefile.am: Remove *_HEADERS.
	* nfs/Makefile.am: Remove *_HEADERS.

2002-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in arpa/Makefile.am, machine/Makefile.am,
	sys/Makefile.am, vm/Makefile.am.
	Add . to SUBDIRS.
	* arpa/Makefile.am: Remove.
	* machine/Makefile.am: Remove.
	* sys/Makefile.am: Remove.
	* vm/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2002-11-06	Chris Johns <ccj@acm.org>

	* sys/select.h: Add C++ to C external.

2002-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* kern/uipc_mbuf.c: Comment out m0 in m_copydata to suppress
	warning.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: Corrected.

2002-11-01	Eric Norum <eric.norum@usask.ca>

	* nfs/bootp_subr.c, rtems/rtems_bsdnet.h, rtems/rtems_glue.c:
	Till Straumann's patch (PR295) to use bootp option 129 to get
	command line string.  Till Straumann's patch to change
	inet_ntoa->inet_ntop.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* libc/rcmd.c, netinet/in_cksum_arm.c: Removed warnings.

2002-10-28	Joel Sherrill <joel@OARcorp.com>

	* Pass to eliminate warnings.
	* kern/uipc_mbuf.c: Conditional SYSINIT() usage on __rtems__.
	Fix return statement without a value.
	* lib/ftpfs.c: read and write filesystem routines return ssize_t.
	* lib/syslog.c: Add include of <string.h> to eliminate warning.
	* lib/tftpDriver.c: read and write filesystem routines return ssize_t.
	* libc/gethostbydns.c: Prototype abort().
	* libc/inet_ntoa.c: Prototype strcpy().
	* libc/rcmd.c: Add include of <sys/select.h>
	* net/if_loop.c: Turn token at end of endif to comment.
	* net/rtsock.c, nfs/bootp_subr.c:  Conditional SYSINIT() usage
	on __rtems__.