@@ -9,9 +9,7 @@ LIB = $(ARCH)/lib.a
 
 C_FILES = if.c if_ethersubr.c if_loop.c radix.c route.c rtsock.c raw_cb.c \
     raw_usrreq.c if_ppp.c ppp_tty.c pppcompress.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
-
-OBJS = $(C_O_FILES)
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 include $(top_srcdir)/../automake/multilib.am
 include $(top_srcdir)/../automake/compile.am
@@ -27,7 +25,7 @@ AM_CPPFLAGS += -D_COMPILING_BSD_KERNEL_ -DKERNEL -DINET -DNFS -DDIAGNOSTIC \
 $(LIB): $(OBJS)
 	$(make-library)
 
-all-local: $(PREINSTALL_FILES) $(ARCH) $(OBJS) $(LIB)
+all-local: $(PREINSTALL_FILES) $(ARCH) $(LIB)
 
 .PRECIOUS: $(LIB)
 
