@@ -10,9 +10,7 @@ C_FILES = if_ether.c igmp.c in.c in_cksum.c in_pcb.c in_proto.c in_rmx.c \
     ip_divert.c ip_fw.c ip_icmp.c ip_input.c ip_mroute.c ip_output.c \
     raw_ip.c tcp_debug.c tcp_input.c tcp_output.c tcp_subr.c tcp_timer.c \
     tcp_usrreq.c udp_usrreq.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
-
-OBJS = $(C_O_FILES)
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 include $(top_srcdir)/../automake/multilib.am
 include $(top_srcdir)/../automake/compile.am
@@ -29,7 +27,7 @@ AM_CPPFLAGS += -D_COMPILING_BSD_KERNEL_ -DKERNEL -DINET -DNFS -DDIAGNOSTIC \
 $(LIB): $(OBJS)
 	$(make-library)
 
-all-local: $(PREINSTALL_FILES) $(ARCH) $(OBJS) $(LIB)
+all-local: $(PREINSTALL_FILES) $(ARCH) $(LIB)
 
 .PRECIOUS: $(LIB)
 
