@@ -10,9 +10,7 @@ C_FILES = sghostname.c issetugid.c rtems_glue.c rtems_syscall.c \
     rtems_bootp.c rtems_showmbuf.c rtems_showroute.c rtems_showifstat.c \
     rtems_showipstat.c rtems_showicmpstat.c rtems_showtcpstat.c \
     rtems_showudpstat.c rtems_select.c mkrootfs.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
-
-OBJS = $(C_O_FILES)
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 include_rtems_HEADERS = rtems_bsdnet.h rtems_bsdnet_internal.h tftp.h \
     ftpfs.h mkrootfs.h
@@ -40,7 +38,7 @@ AM_CPPFLAGS += -D_COMPILING_BSD_KERNEL_ -DKERNEL -DINET -DNFS -DDIAGNOSTIC \
 $(LIB): $(OBJS)
 	$(make-library)
 
-all-local: $(PREINSTALL_FILES) $(ARCH) $(OBJS) $(LIB)
+all-local: $(PREINSTALL_FILES) $(ARCH) $(LIB)
 
 .PRECIOUS: $(LIB)
 
